[阶段一] B1.6+B1.7 移除 token 自动注入 + JWT role 注入 SecurityContext
- B1.6: 删除 ExecutionServiceImpl.injectAuthTokenIfLocalhost——用户 JWT 不再被塞进用例 request_headers 落库（凭证泄露/用例污染/越权重放三重风险消除）
- B1.7: JwtUtil.generateToken 签发 role claim；JwtAuthFilter 解析并构建 ROLE_xxx SimpleGrantedAuthority
- 语义修正: 坏/过期 token 视为匿名放行走链（原直接 401 挡住公开端点，过期用户无法重新登录）
- 上下文卫生: createEmptyContext + try/finally clearContext（防线程池身份残留）
- SecurityConfig: 补 JwtAuthFilter 的 FilterRegistrationBean 禁用自动注册（防双重过滤，与 CiAuthFilter 同款）

验证: 登录 token 含 role=ADMIN；业务接口 200；坏 token 访问 /api/auth/login 200（原 401 死循环消除）；
TC-006 无凭证自请求 FAIL（注入删除后的预期语义变化）；TC-001 httpbin 回归 PASS；98 单测绿